[gd_scene load_steps=4 format=3 uid="uid://b1ctjvh0ugpqa"]

[ext_resource type="Script" path="res://Scripts/PlatformGhost.gd" id="1_umn73"]
[ext_resource type="Texture2D" uid="uid://b68e8106kqfr6" path="res://Animations/Map/ghostblock.png" id="2_186ld"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1i6c"]

[node name="GhostPlatform" type="Area2D"]
script = ExtResource("1_umn73")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m1i6c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_186ld")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 33.0
offset_top = -53.0
offset_right = 145.0
offset_bottom = -30.0
text = "Hehe"

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = -82.0
offset_top = 30.0
offset_right = 30.0
offset_bottom = 53.0
text = "Haha
"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
